# deepsearch-agents-web

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile.backend  README.md  deepsearch-agents-cloudflare-railway-deployment.md  pyproject.toml  railway.json  requirements.txt
agent/: prompts.py
agent/subagents/: network_search_agent.py
api/: monitor.py
app/agent/: llm.py  main_agent.py
app/agent/subagents/: award_review_agent.py
app/api/: chat_history.py  context.py  monitor.py  server.py
app/award_review/: 2026集团年中评优奖项及标准_知识库版.md  __init__.py  review_batch.py
app/prompt/: prompts.yml
app/tools/: award_review_tool.py
docker/: docker-compose.yaml
docker/mysql/: mysql.sql
docs/: 智能体平台技术路线与部署路径.md
examples/: 13-model-call-limit-middleware.py
frontend/src/: App.tsx  styles.css  types.ts
frontend/src/components/: AgentTopology.tsx  ChatComposer.tsx  ChatHistorySidebar.tsx  ConversationThread.tsx
frontend/src/hooks/: useChatHistory.ts  useDeepAgentSession.ts
frontend/src/lib/: api.ts  config.ts
prompt/: prompts.yml
tools/: tavily_tool.py
