[project]
name = "deepsearch-agents"
version = "0.1.0"
description = "DeepAgents learning examples for deep research agents."
requires-python = ">=3.12,<3.13"
dependencies = [
    "deepagents==0.5.7",
    "langchain==1.2.17",
    "langchain-openai==1.2.1",
    "langgraph==1.1.10",
    "python-dotenv==1.2.2",
    "tavily-python==0.7.24",
]

[tool.uv]
package = false
